syntax = "proto3";
package ru.microservices.user_service;
option java_multiple_files = true;

message UserModel{
  int64 id = 1;
  string email = 2;
  int64 role_id = 3;
}